--- a/org-better-defaults.org
+++ b/org-better-defaults.org
@@ -170,7 +170,11 @@ Once again, there are several solutions for this, but I've always liked Projecti
 
 #+begin_src emacs-lisp
 (use-package treemacs
-  :hook (after-init . 'treemacs)
+  :init
+  (treemacs--add-project-to-current-workspace "~/org~")
+
+  :hook
+  (after-init . treemacs)
   )
 #+end_src
 
@@ -212,9 +216,12 @@ Making the UI a little easier to interact with.
 * Core Org Mode Settings
 
 ** Default Locations
-Org needs to know where to look for things and the most common place to put your org files is in your home directory. While we are at it, let's associate all files ending in ~.org~ with ~org-mode~.
+Org needs to know where to look for things and the most common place to put your org files is in your home directory. So first let's create the ~~/org~ directory if it doesn't already exist. Then we can associate all files ending in ~.org~ with ~org-mode~.
 
 #+begin_src emacs-lisp
+(let ((org-dir "~/org"))
+  (make-directory org-dir))
+
 (setq org-agenda-files '("~/org"))
 
 (add-to-list 'auto-mode-alist '("\\.org\\'" . org-mode))
