Cleaning up the formatting

--- a/org-better-defaults.org
+++ b/org-better-defaults.org
@@ -214,16 +214,9 @@ Making the UI a little easier to interact with.
 Org needs to know where to look for things and the most common place to put your org files is in your home directory. So first let's create the ~~/org~ directory if it doesn't already exist. Then we can associate all files ending in ~.org~ with ~org-mode~.
 
 #+begin_src emacs-lisp
-(if
-    (not
-     (file-directory-p
-      (substitute-in-file-name "$HOME/org")
-      )
-     )
-    (
-     let ((org-dir "~/org"))
-      (make-directory org-dir)
-    )
+(if (not (file-directory-p (substitute-in-file-name "$HOME/org")))
+    (let ((org-dir (substitute-in-file-name "$HOME/org")))
+      (make-directory org-dir))
   )
 
 (setq org-agenda-files '("~/org"))
@@ -351,19 +344,6 @@ This expands the default TODO keywords by giving us some more robust options. No
         ))
 #+end_src
 
-** Colorizing Tags 
-#+begin_src emacs-lisp
-(setq org-tag-faces
-      '(
-        ("CRITICAL" . (:foreground "red1"          :weight bold))
-        ("easy"     . (:foreground "forest green"  :weight bold))
-        ("medium"   . (:foreground "yellow1"       :weight bold))
-        ("hard"     . (:foreground "sienna"        :weight bold))
-        ("@work"    . (:foreground "royalblue1"    :weight bold))
-        ("@home"    . (:foreground "mediumPurple1" :weight bold))
-        )
-      )
-#+end_src
 
 * Better Agendas
 ** Daily Agenda
@@ -426,17 +406,16 @@ PRIORITY may be one of the characters ?A, ?B, or ?C."
       )
 #+end_src
 
-** Colorizing Tags
-
+** Colorizing Tags 
 #+begin_src emacs-lisp
 (setq org-tag-faces
       '(
-        ("CRITICAL"     . (:foreground "red1"          :weight bold))
-        ("grooming"     . (:foreground "forest green"  :weight bold))
-        ("meeting"      . (:foreground "yellow1"       :weight bold))
-        ("retro"        . (:foreground "royalblue1"    :weight bold))
-        ("scrum"        . (:foreground "mediumPurple1" :weight bold))
-        ("tech_design"  . (:foreground "sienna"        :weight bold))
+        ("CRITICAL" . (:weight bold :foreground "red1"         ))
+        ("easy"     . (:weight bold :foreground "forest green" ))
+        ("medium"   . (:weight bold :foreground "yellow1"      ))
+        ("hard"     . (:weight bold :foreground "sienna"       ))
+        ("@work"    . (:weight bold :foreground "royalblue1"   ))
+        ("@home"    . (:weight bold :foreground "mediumPurple1"))
         )
       )
 #+end_src
