--- a/README.org
+++ b/README.org
@@ -174,19 +174,14 @@ Since Carla has responded with the information we needed and we logged the resul
 ** Start Working on TODO #3
 Before we do any work on this task we need to update the meta data associated with it. If you recall from the description this is due on Thursday (remember in this example it is Monday) at 11am. And while it is good that we recorded this deadline in the body of this TODO, it would be even better if there was a way of integrating this information into our TODO so it could be tracked in the Agenda View. Well good news for us, there is a way of handling deadlines.
 
-Start by navigating to the third and final action item called ~Compile results and send final report to Alice~ and hit ~C-c C-d~ to bring up the deadline selector. Now there are a lot of ways we could enter a date. We could type it out in one of several formats or we could click on the desired day in the calendar up top. However, we are lazy so we are going to specify the deadline in the easy manner possible. Since it is Monday and we want to make our deadline for Thursday at 11am, when the mini buffer appears so we can select a date, simply enter ~+3d 11am~ and hit return. This creates a deadline 3 days in the future at 11am. Now when we refresh the Agenda View we will see that this TODO is special! Because it has a deadline marked on it.
+Start by navigating to the third and final action item called ~Compile results and send final report to Alice~ and hit ~C-c C-d~ to bring up the deadline selector. Now there are several different ways we could enter a date. We could type it out in one of several formats or we could click on the desired day in the calendar up top. However, we are lazy so we are going to specify the deadline in the easy manner possible. Since it is Monday and we want to make our deadline for Thursday at 11am, when the mini buffer appears so we can select a date, simply enter ~+3d 11am~ and hit return. This creates a deadline 3 days in the future at 11am. Now when we refresh the Agenda View we will see that this TODO is special! Because it has a deadline marked on it.
 
+Now that the deadline has been added go ahead and set it to ~IN-PROGRESS~ just like we've done twice before. Add a note of your choice explaining what you started working on. After the state has been changed we could add additional notes to this TODO that might describe the order we wanted our report to be in, a list of graphs and tables to include, or links to templates that should be used for these types of company reports. You can also make new subheadings by hitting ~C=return~ and then hitting ~tab~ to move the heading over. Subheadings should be labeled in ways that make sense to your task. You can easily rearrange headings by holding the ~alt~ key and pressing the ~up~ or ~down~ arrow.
 
+** A New TODO
+At this point in the tutorial we will assume that two days have passed and two things happened, Bob got you the data you needed and you completed your report and sent it to Alice. You can now close those remaining TODOs and then refresh your Agenda to verify that they are closed. Now that all of our current tasks are complete we can focus on a new email from Alice. In it she tells us that she liked our report so much that she wants us to generate another report that forecasts the purchasing requirements of the next fiscal year. It also needs to have more details, more graphics, and should be presented to management in a week at the end of the month planning meeting. Since this new task didn't come in a meeting we are going to create a new TODO using the TODO capture template.
 
-
-
-** Start with a simple TODO
-You start the day and realize that you need to write a report, send it to your coworker for review, and then submit it to your boss by the end of the day. There is an email detailing notes about this report and you were in a meeting yesterday in which you took some notes too, so you want to consolidate everything in one place. To accomplish this we are first going to create a new TODO item.
-
-
-<EMPTY TODO PIC>
-
-You will now see a new TODO template and your cursor will be on the heading line. Now we can enter a heading. Type in ~Write report on future purchases~ as your title. You can now press the down key or press ~C-n~ to go to the next line. Here you are going to enter the details ~I need to file a report detailing future purchases that can be made in the next 2 months. I need to run this by Bob and get his feedback before I submit it to Alice.~ Once you've added your description it is time to save your TODO. Press ~C-c C-c~ to save it.
+Fire up the Capture Template with ~C-c c~ only this time hit ~t~ to create a new TODO. For the tags in the mini buffer put ~report~ and hit return. You will now see a new TODO template and your cursor will be on the heading line. Now we can enter a heading. Type in ~Create yearly report and presentaiton~ as your title. You can now press the down key or press ~C-n~ to go to the next line. Here you are going to enter the details ~I need to create another foreasting report as well as a presentation and present my findings to management in one week.~ Once you've added your description it is time to save your TODO. Press ~C-c C-c~ to save it.
 
 <TODO BEFORE SAVE PIC>
 
@@ -194,26 +189,32 @@ As soon as you save your new TODO entry a file will appear on the left hand side
 
 <TREEMACS AND TODO FILE PIC>
 
-** Start working on the TODO
-You should now be back in the ~todos.org~ file looking at the entry you just created. Move your cursor so it is on the line with the ~TODO~ keyword on it. In this case, since it is our first TODO, it will be on the first line. Once you are there press ~C-c C-t~. This will open the mini buffer at the bottom of Emacs and it will contain all the valid states you can change this TODO to. You will have the option of setting it to one of five states. Those are TODO, IN-PROGRESS, BLOCKED, DONE, and WON'T-DO. Since we want to start work on this task, hit the ~i~ key to set it to the in progress state.
-
-As soon as you hit ~i~ you will notice the mini buffer popped up again. Now is your chance to add a short note about the state change you are making. Go ahead and type ~I got handed this task during the morning meeting~ and then press ~C-c C-c~ to save it. You will notice your TODO changed slightly. The first thing you should see is that you now have a ~State~ entry along with a timestamp and your note. This is very handy because it allows you to track your status with both notes and timestamps. Org Mode can also track the time you spend on a TODO and put it in a table, but that is too much for this tutorial.
+** Working the TODO
+This TODO is going to behave in the same way that the action items worked. You can change the state, set a deadline, add notes, etc. I encourage you to set it to ~IN-PROGRESS~, add your own note, and add a few lines describing what you are going to do. After you do that we are going to look at some more advanced ways of organizing your notes.
 
 At this point you have set your TODO to a state showing that you are currently working on it. You have added a note explaining the state change, now you can add some more details. Let's start with a new subheading called ~Subtasks~. Press ~C-Return~ to get a new heading and then press ~tab~ once to make it a 2nd level heading. From here, type ~Subtasks [/]~ and then hit return. We are going to create an auto-incrementing list. On the line after your heading, type ~- [ ] Gather notes~ and press return. Two interesting things should have happened. A new check box item should have appeared on the next line, and the ~Subtasks~ heading should now have a count of the check box items we created. To get out of the auto checkbox mode just hit return twice. Don't worry if the count looks wrong, that will get fixed shortly.
 
-Go ahead and fill out a few more check box items until your list looks like the image below.
+Go ahead and fill out a few more check box items until your list looks like the image below. We want our subtasks to include ~Create Tasks~, ~Find Sources~, ~Create Graphics~, ~Create Rough Draft~, ~Create Final Draft~, and ~Test Presentation~.
 
-Looking good so far, things are just barely starting to take shape. We now have one sub heading that tracks all of our subtasks, now we need another heading for our notes. So hit ~C-Return~ and then ~tab~ to create a new 2nd level sub heading and name this one ~Notes~. Here you would add notes you took in your meeting, notes you got from an email, or notes someone handed you that you are going to summarize here. I've added some filler notes here, but you are welcome to put whatever you'd like.
+Once you've finished adding all the subtasks, go back to the first subtask called ~Create Tasks~. With your cursor anywhere on that line hit ~C-c C-c~. Look at that! There is now an ~X~ next to our completed subtask and the progress counter has incremented. This is useful!
 
-Finally, once you've finished adding your notes, go back to the first line of the ~Progress~ subheading. With your cursor anywhere on the line that says ~Gather notes~ hit ~C-c C-c~. Look at that! There is now an ~X~ next to our completed subtask and the progress counter has incremented. This is useful.
+Things are really starting to take shape. We now have one sub heading that tracks all of our subtasks, now we need another heading for our presentation notes. So hit ~C-Return~ and then ~tab~ to create a new 2nd level sub heading and name this one ~Presentation Notes~. Here you would add notes on what you want to say in your presentation. Slides to use, people to thank, etc. Each subheading should relate to a different part of this project.
 
-
+Additional subheadings can be created as needed to further reflect other sources, ideas, or notes you wish to take. 
 
 ** Make a note
+At this point in the Tutorial we have covered most of the major concepts so I'm going to just end on a few simple things Org Mode can do for you. Perhaps the simplest thing is just a basic note. This note doesn't have a TODO associated with it, nor does it have a deadline, or even a tag. It is just a simple way of remembering something. I like to keep a notes file filled with random things that don't really belong anywhere. Since you can setup Emacs to search your org files (go look up Projectile among others) it is easy to find a specific note once you know what you are looking for.
+
+In this case start the capture template with ~C-c c~ and then hit ~n~ to create a new note. You can give it a tag, but you don't need to. For this note call it ~Office Supplies~, hit return, and then add the note ~The code for the supply closet is 223344~. File your note with the usual ~C-c C-c~ and you have created a simple note. While it is hardly as exciting as the other features we've covered, it is still a useful thing to have.
 
 ** Record a journal entry
+Lastly we are going to cover the journal entry capture template. This feature is meant to be a quick and easy way to log accomplishments at your job. If you find it useful consider looking up some of the Org Mode journal packages that offer more features. But for this case, this is meant as a very simple solution that allows you to jot down what you are doing on any given day. You can add as little or as much detail as you want. The goal is only to have an easy to reference record of what you do each day on the job. I personally have found this to be very useful at the end of the year when writing up my accomplishments for a performance review. It is very helpful to see what I've done throughout the year. 
 
-** Filter the agenda
+** Filtering Tags
+So far we have only talked about creating content in Org Mode and then viewing it in the Agenda. However, the Agenda View has quite a bit of hidden functionality that we never talked about. For example, it has a very nice filtering capability. For example, to filter your TODOs by tag you would navigate to the Agenda View and type ~/~ followed by the tag you wished to search for. If you wanted to reset the Agenda View and clear the search you would type ~|~. The Agenda supports some very advanced filtering options which is far beyond the scope of this simple tutorial, but I encourage you to checkout the Org Manual's page on [[https://orgmode.org/manual/Filtering_002flimiting-agenda-items.html][filtering/limiting agenda items]].
+* Beyond This Tutorial
+I hope you found this simple tutorial useful. Emacs and Org Mode combine to make a very versatile piece of software that has many unique uses. I encourage everyone who finds this interesting to explore more of Org Mode's functionality. This tutorial only touched on the very basics so as not to overwhelm new users, but if this interests you, please keep digging. There are still so many secrets to find!
 
-** Recap
+Likewise I want to stress to all new users that everything contained in this repo is just one way you can use Org Mode to organize your life. This isn't the *right* way because there is no universal *right* way, only a way that works for you. If you find some of these features useful but not others, then only use what you want. If you want to tweak the configurations listed here to better suite your tastes, then do so with my blessing. I sincerely hope that this software improves your life to the same degree it has improved mine. With that I leave you to go forth and do great things.
+
 
