Minor editing and treemacs shortcuts

--- a/README.org
+++ b/README.org
@@ -9,7 +9,7 @@ For more details see below, but this is the minimum you need to make this work.
 1. Backup your ~.emacs~ file if you have one (~mv ~/.emacs ~/.emacs.bak~)
 2. Download the ~.emacs~ file from this repo
 3. Move it to your home directory (~mv ~/Downloads/.emacs ~/~)
-4. You are done, now restart ~emacs~
+4. You are done, now restart ~emacs~ and take a look at the shortcut guide below
 
 * Welcome New Org Mode Users
 So you want to use Org Mode, but you don't have 2 years to devote to teaching yourself Lisp? No problem. This repo was created just for you. Here you will find a simple solution that requires no additional lisp configuration on your part to work. It is ideal for users who are completely new to both Emacs and Org Mode. Simply drop this config file into your home directory, restart Emacs, and you are ready to go.
@@ -20,11 +20,11 @@ A lot of Emacs related documentation assumes you already know quite a bit about 
 
 The good news is that Org Mode "just works" right out of the box. The bad news is that the defaults are not great and without a lot of customization, it isn't clear *at all* that any of this stuff is actually useful. I discovered this first hand when I helped a new user get started in Org Mode. My ~.emacs~ file is over a thousand lines long with the Org Mode section easily spanning several hundreds lines. So when this new user saw my version of Org Mode and compared it to their version of Org Mode, they were rather disappointed. Where was the magic? Why did mine look fancy and theirs look so plain? And what did they have to do to get from where they were to where I was. I could have told them to just play with it for a year or two and then they would eventually get an idea of what they needed, but I knew if I did that they would just find another solution. What to do?
 
-I sent them the link I put above so they could check out my tutorial on designing your Org Mode configuration from scratch, but they didn't want that. In fact, they had no idea what they wanted. The only thing they were sure of was that they wanted it to be functional now. Not in a year, not after they had learned lisp, right now. So what I did was massively pare down my own Emacs configuration until it was a lean setup geared entirely towards Org Mode. No code completion, language servers, linters, git integration, or anything else that wasn't directly related to Org Mode. Then I further cleaned it up to make it as easy to use as possible. Finally, I helped them install this new config and gave them some minimal instructions on how to use it. Guess what? They loved it. Based on their response I realized that there were probably a lot of people who would appreciate a little help getting started with Org Mode. So if that is you, I think this repo might help you.
+I sent them the link I put above so they could check out my tutorial on designing your Org Mode configuration from scratch, but they didn't want that. In fact, they had no idea what they wanted. The only thing they were sure of was that they wanted it to be functional now. Not in a year, not after they had learned lisp, right now. So what I did was massively pare down my own Emacs configuration until it was a lean setup geared entirely towards Org Mode. No code completion, language servers, linters, git integration, or anything else that wasn't directly related to Org Mode. Then I further cleaned it up to make it as easy to use as possible. Finally, I helped them install this new config and gave them some minimal instructions on how to use it. Guess what? They loved it. And based on their response I realized that there were probably a lot of people who would appreciate a little help getting started with Org Mode. So if that is you, I think this repo might help you.
 * About This Repo
 This repo is designed to help brand new Emacs users become productive in Org Mode. This is not an Emacs tutorial, nor is it meant as an all encompassing Org Mode tutorial. I will explain all the basic key commands you will need to get started, but this is not a substitute for reading the [[https://orgmode.org/manual/][Official Org Mode Manual]].
 ** Overview
-The ~.emcas~ file has two core parts to it. The first part deals with improving how Org Mode looks and functions at a basic level. The second core part of this configuration is the default values provided. For more info and specific implementation details, look over the ~org-better-defaults.org~ file in this repo.
+The ~.emacs~ file has two core parts to it. The first part deals with improving how Org Mode looks and functions at a basic level. The second core part of this configuration is the default values provided. For more info and specific implementation details, look over the ~org-better-defaults.org~ file in this repo.
 
 Here is a list of most of the primary enhancements provided:
 
@@ -50,10 +50,10 @@ Here is a list of most of the primary enhancements provided:
 ** Installation
 To make your version of Emacs and Org Mode look like the screenshots below, download the ~.emacs~ file in this repo and either copy it into your existing ~.emacs~ file or overwrite it entirely. Then restart Emacs, open (or create) an Org file and you should a much nicer looking version of Org. To verify Org looks different you can download the ~org-better-defaults.org~ file in this repo and open it.
 * I've Installed It, Now What?
-If you've already installed the config file and restarted Emacs, then it is time to begin your journey into productivity! As a side note, there are many more features of Org Mode that are not covered here (such as Org Babel, Org Roam, etc.) that greatly expand what you can do. Understanding them is not required for this tutorial, however exploring them on your own is encouraged. Regardless, you should absolutely check out the Org Manual for detailed instructions and expanded examples.
+If you've already installed the config file and restarted Emacs, then it is time to begin your journey into productivity! Here are your next steps. First, finish reading this section so you understand the broad concepts that will be discussed here. Then, once you have a rough idea of the concepts, work your way through the tutorial so you can understand how someone might apply those concepts to real world tasks.
 
 ** An Intro to this Org Mode Tutorial
-In this tutorial I am going to use the recurring example of someone who wants to use Org Mode to manage tasks at work. I have found that without a realistic example, many tutorials just become too abstract and confusing. So for the duration of this section each of these three concepts will be explained in relation to how they could support a workflow at a generic job. By the end of this Tutorial you should have enough knowledge to create your own TODOs, track them in the Agenda, create new entries with the custom capture templates, and make use of tags to organize everything.
+In this tutorial I am going to use the recurring example of someone who wants to use Org Mode to manage tasks at work. I have found that without a realistic example, many tutorials just become too abstract and confusing. So for the duration of this section each of these three concepts will be explained in relation to how they could support a workflow at a generic job. By the end of this tutorial you should have enough knowledge to create your own TODOs, track them in the Agenda, create new entries with the custom capture templates, and make use of tags to organize everything.
 
 To start off we are going to talk briefly about the three core concepts that make Org Mode work.
 
