--- a/org-better-defaults.org
+++ b/org-better-defaults.org
@@ -60,53 +60,12 @@ This makes the UI a little more pleasant.
   (setq use-short-answers t)                      ; y-or-n-p makes answering questions faster
   (setq read-process-output-max (* 1024 1024))    ; Increase the amount of data which Emacs reads from the process
   (setq gc-cons-threshold 100000000)
-  (global-hl-line-mode 1)			        ; Highlight the current line to make it more visible
+  (global-hl-line-mode nil)		        ; Highlight the current line to make it more visible
   (setq lsp-idle-delay 0.500)
   )
 
 (add-to-list 'image-types 'svg)
 #+end_src
-** Colors
-
-#+begin_src emacs-lisp
-(setq light-mode t)
-
-(if light-mode
-  (setq
-   ;; TODO States
-   todo-color "DarkOrange"
-   in-progress-color "DeepSkyBlue3"
-   blocked-color "Firebrick1"
-   done-color "Green3"
-   wont-do-color "SaddleBrown"
-
-   ;; Tags
-   critical-color "red1"
-   easy-color "forest green"
-   medium-color "yellow1"
-   hard-color "sienna"
-   work-color "royalblue1"
-   home-color "mediumPurple1"
-   )
-  (setq
-   ;; TODO States
-   todo-color "GoldenRod"
-   in-progress-color "Cyan"
-   blocked-color "Red"
-   done-color "LimeGreen"
-   wont-do-color "tan"
-
-   ;; Tags
-   critical-color "red1"
-   easy-color "forest green"
-   medium-color "yellow1"
-   hard-color "sienna"
-   work-color "royalblue1"
-   home-color "mediumPurple1"
-   )
-  )
-#+end_src
-
 ** Install Small Packages
 These are a bunch of small, but useful, packages that make using org much nicer.
 
@@ -195,26 +154,6 @@ There are several options for this kind of functionality, but I'm going with Hel
   )
 #+end_src
 
-** Projectile
-Once again, there are several solutions for this, but I've always liked Projectile so that's what I'm sticking with.
-
-#+begin_src emacs-lisp
-;; (use-package projectile
-;;   :bind (:map projectile-mode-map
-;;               ("C-c p" . projectile-command-map))
-;;   :config
-;;   (projectile-global-mode)
-;;   (setq projectile-completion-system 'helm)
-;;   (helm-projectile-on)
-;;   )
-
-;; (use-package helm-projectile)
-
-;; (use-package ac-helm)
-
-;; (use-package seeing-is-believing)
-#+end_src
-
 ** Treemacs
 Treemacs needs to be installed because it will allow you to view the top two headings of org files. Effectively creating a top level outline view of all org files. This is incredibly useful. With this hook treemacs will start as soon as Emacs is launched. When that happens, it will prompt for the directory to use as the root of the project. I recommend using the org directory in your home directory (don't worry, it gets automatically created) as that is a pretty standard place to store your org files.
 
@@ -229,7 +168,15 @@ Treemacs needs to be installed because it will allow you to view the top two hea
         ("C-x t M-t" . treemacs-find-tag))
   )
 #+end_src
+** Improved Modeline
+This modeline is nicer than the default one. It is a small tweak, but I like it.
 
+#+begin_src emacs-lisp
+(use-package doom-modeline
+:ensure t
+:hook (after-init . doom-modeline-mode)
+)
+#+end_src
 ** Improved Defaults
 Making the UI a little easier to interact with.
 
@@ -308,6 +255,47 @@ It is often helpful to record a timemstamp when a TODO item is marked done. You 
 
 #+begin_src emacs-lisp
 (setq org-log-done 'time)
+#+end_src
+
+** Colors
+
+#+begin_src emacs-lisp
+(setq light-mode t)
+
+(if light-mode
+  (setq
+   ;; TODO States
+   todo-color "DarkOrange"
+   in-progress-color "DeepSkyBlue3"
+   blocked-color "Firebrick1"
+   done-color "Green3"
+   wont-do-color "SaddleBrown"
+
+   ;; Tags
+   critical-color "red1"
+   easy-color "turquoise4"
+   medium-color "turquoise4"
+   hard-color "turquoise4"
+   work-color "royalblue1"
+   home-color "mediumPurple2"
+   )
+  (setq
+   ;; TODO States
+   todo-color "GoldenRod"
+   in-progress-color "Cyan"
+   blocked-color "Red"
+   done-color "LimeGreen"
+   wont-do-color "tan"
+
+   ;; Tags
+   critical-color "red1"
+   easy-color "cyan3"
+   medium-color "cyan3"
+   hard-color "cyan3"
+   work-color "royalblue1"
+   home-color "mediumPurple1"
+   )
+  )
 #+end_src
 
 ** Better Babel
@@ -441,11 +429,11 @@ PRIORITY may be one of the characters ?A, ?B, or ?C."
 #+begin_src emacs-lisp
 (setq org-todo-keyword-faces
       `(
-        ("TODO"        . (:weight bold :foreground ,todo-color))
-        ("IN-PROGRESS" . (:weight bold :foreground ,in-progress-color))
-        ("BLOCKED"     . (:weight bold :foreground ,blocked-color))
-        ("DONE"        . (:weight bold :foreground ,done-color))
-        ("WONT-DO"     . (:weight bold :foreground ,wont-do-color))
+        ("TODO"        . (:weight bold :foreground ,todo-color        ))
+        ("IN-PROGRESS" . (:weight bold :foreground ,in-progress-color ))
+        ("BLOCKED"     . (:weight bold :foreground ,blocked-color     ))
+        ("DONE"        . (:weight bold :foreground ,done-color        ))
+        ("WONT-DO"     . (:weight bold :foreground ,wont-do-color     ))
         )
       )
 #+end_src
@@ -453,15 +441,40 @@ PRIORITY may be one of the characters ?A, ?B, or ?C."
 ** Colorizing Tags 
 #+begin_src emacs-lisp
 (setq org-tag-faces
-      '(
-        ("CRITICAL" . (:weight bold :foreground "red1"         ))
-        ("easy"     . (:weight bold :foreground "forest green" ))
-        ("medium"   . (:weight bold :foreground "yellow1"      ))
-        ("hard"     . (:weight bold :foreground "sienna"       ))
-        ("@work"    . (:weight bold :foreground "royalblue1"   ))
-        ("@home"    . (:weight bold :foreground "mediumPurple1"))
+      ``(
+        ("CRITICAL" . (:weight bold :foreground ,critical-color ))
+        ("easy"     . (:weight bold :foreground ,easy-color     ))
+        ("medium"   . (:weight bold :foreground ,medium-color   ))
+        ("hard"     . (:weight bold :foreground ,hard-color     ))
+        ("@work"    . (:weight bold :foreground ,work-color     ))
+        ("@home"    . (:weight bold :foreground ,home-color     ))
         )
       )
+#+end_src
+
+** Strike Through DONE Items
+#+begin_src emacs-lisp
+;; Enable the fontification of headlines for tasks that have been marked as
+;; completed.
+(setq org-fontify-done-headline t)
+
+(custom-set-faces
+ ;; Face used for todo keywords that indicate DONE items.
+ '(org-done
+   (
+    (t (:strike-through t))
+    )
+   )
+
+ ;; Face used to indicate that a headline is DONE. This face is only used if
+ ;; ‘org-fontify-done-headline’ is set. If applies to the part of the headline
+ ;; after the DONE keyword.
+ '(org-headline-done
+   (
+    (t (:strike-through t))
+    )
+   )
+ )
 #+end_src
 
 ** Misc Features
@@ -500,5 +513,16 @@ PRIORITY may be one of the characters ?A, ?B, or ?C."
 #+end_src
 
 
+** Fade Items Marked DONE
+#+begin_src emacs-lisp
+(defun my/modify-org-done-face ()
+  (setq org-fontify-done-headline t)
+  (set-face-attribute 'org-done nil :strike-through t)
+  (set-face-attribute 'org-headline-done nil
+                      :strike-through t
+                      :foreground "light gray"))
 
+(eval-after-load "org"
+  (add-hook 'org-add-hook 'my/modify-org-done-face))
+#+end_src
 
