--- a/org-better-defaults.org
+++ b/org-better-defaults.org
@@ -60,7 +60,7 @@ This makes the UI a little more pleasant.
   (setq use-short-answers t)                      ; y-or-n-p makes answering questions faster
   (setq read-process-output-max (* 1024 1024))    ; Increase the amount of data which Emacs reads from the process
   (setq gc-cons-threshold 100000000)
-  (global-hl-line-mode nil)		        ; Highlight the current line to make it more visible
+  (global-hl-line-mode t)		                ; Highlight the current line to make it more visible
   (setq lsp-idle-delay 0.500)
   )
 
@@ -248,6 +248,7 @@ This makes things look so much nicer.
 (use-package org-indent
   :ensure nil
   :diminish
+  :hook (org-mode . org-indent-mode)
   :custom
   (org-indent-indentation-per-level 4))
 #+end_src
@@ -280,7 +281,7 @@ It is often helpful to record a timemstamp when a TODO item is marked done. You 
    in-progress-color "DeepSkyBlue3"
    blocked-color "Firebrick1"
    done-color "Green3"
-   wont-do-color "SaddleBrown"
+   wont-do-color "Green3"
 
    ;; Tags
    critical-color "red1"
@@ -296,7 +297,7 @@ It is often helpful to record a timemstamp when a TODO item is marked done. You 
    in-progress-color "Cyan"
    blocked-color "Red"
    done-color "LimeGreen"
-   wont-do-color "tan"
+   wont-do-color "LimeGreen"
 
    ;; Tags
    critical-color "red1"
@@ -452,7 +453,7 @@ PRIORITY may be one of the characters ?A, ?B, or ?C."
 ** Colorizing Tags 
 #+begin_src emacs-lisp
 (setq org-tag-faces
-      ``(
+      `(
         ("CRITICAL" . (:weight bold :foreground ,critical-color ))
         ("easy"     . (:weight bold :foreground ,easy-color     ))
         ("medium"   . (:weight bold :foreground ,medium-color   ))
